feat: implement agent mode with rollback capabilities and notification system