@@ -16,11 +16,45 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 class CommitMessageGeneratorTest {
 
+    // Helper method to create a mock Change without using the problematic constructor
+    private static Change createMockChange() {
+        // Create a mock ContentRevision to satisfy the Change constructor
+        com.intellij.openapi.vcs.changes.ContentRevision mockRevision =
+                new com.intellij.openapi.vcs.changes.ContentRevision() {
+                    @Override
+                    public String getContent() {
+                        return "test content";
+                    }
+
+                    @Override
+                    public com.intellij.openapi.vcs.FilePath getFile() {
+                        return null; // This is acceptable for our test
+                    }
+
+                    @Override
+                    public com.intellij.openapi.vcs.history.VcsRevisionNumber getRevisionNumber() {
+                        return null;
+                    }
+                };
+
+        return new Change(null, mockRevision) {
+            @Override
+            public com.intellij.openapi.vcs.changes.ContentRevision getBeforeRevision() {
+                return null;
+            }
+
+            @Override
+            public com.intellij.openapi.vcs.changes.ContentRevision getAfterRevision() {
+                return mockRevision;
+            }
+        };
+    }
+
     @Test
     void should_instantiate_generator_without_error() {
         // When
         CommitMessageGenerator generator = new CommitMessageGenerator();
-        
+
         // Then
         assertNotNull(generator);
     }
@@ -29,10 +63,10 @@ class CommitMessageGeneratorTest {
     void should_handle_null_source_in_reflection() {
         // Given
         CommitMessageGenerator generator = new CommitMessageGenerator();
-        
+
         // When: Try reflection with null source
         var result = generator.tryGetChangesViaReflection(null, "null-source");
-        
+
         // Then: Should return empty result without throwing
         assertNotNull(result);
         assertFalse(result.hasSelection());
@@ -43,10 +77,10 @@ class CommitMessageGeneratorTest {
         // Given: Object with no relevant methods
         Object irrelevantObject = new Object();
         CommitMessageGenerator generator = new CommitMessageGenerator();
-        
+
         // When: Try reflection
         var result = generator.tryGetChangesViaReflection(irrelevantObject, "irrelevant");
-        
+
         // Then: Should return empty
         assertNotNull(result);
         assertFalse(result.hasSelection());
@@ -57,19 +91,19 @@ class CommitMessageGeneratorTest {
         // Given: Object with mock selection methods
         TestSelectionPanel panel = new TestSelectionPanel();
         CommitMessageGenerator generator = new CommitMessageGenerator();
-        
+
         // Debug: Verify our panel methods work directly
         List<Change> directChanges = panel.getSelectedChanges();
         assertEquals(1, directChanges.size(), "Panel should return 1 change directly");
         assertNotNull(directChanges.get(0), "The change should not be null");
-        
+
         // When: Use reflection
         var result = generator.tryGetChangesViaReflection(panel, "test-panel");
-        
+
         // Then: Should detect selection
         assertNotNull(result);
-        assertTrue(result.hasSelection(), 
-            "Should detect selection - found " + result.changes().size() + " changes");
+        assertTrue(result.hasSelection(),
+                "Should detect selection - found " + result.changes().size() + " changes");
         assertEquals(1, result.changes().size());
     }
 
@@ -78,10 +112,10 @@ class CommitMessageGeneratorTest {
         // Given: Panel with empty collections
         TestEmptyPanel emptyPanel = new TestEmptyPanel();
         CommitMessageGenerator generator = new CommitMessageGenerator();
-        
+
         // When: Use reflection
         var result = generator.tryGetChangesViaReflection(emptyPanel, "empty-panel");
-        
+
         // Then: Should return no selection
         assertNotNull(result);
         assertFalse(result.hasSelection());
@@ -96,9 +130,9 @@ class CommitMessageGeneratorTest {
                 throw new RuntimeException("Method error");
             }
         };
-        
+
         CommitMessageGenerator generator = new CommitMessageGenerator();
-        
+
         // When: Try reflection (should not throw)
         assertDoesNotThrow(() -> {
             var result = generator.tryGetChangesViaReflection(problematicPanel, "problematic");
@@ -110,9 +144,9 @@ class CommitMessageGeneratorTest {
     static class TestSelectionPanel {
         @SuppressWarnings("unused") // Called via reflection
         public List<Change> getSelectedChanges() {
-            return Arrays.asList(createMockChange());
+            return List.of(createMockChange());
         }
-        
+
         @SuppressWarnings("unused") // Called via reflection
         public List<FilePath> getUnversionedFiles() {
             return Collections.emptyList();
@@ -124,44 +158,10 @@ class CommitMessageGeneratorTest {
         public List<Change> getSelectedChanges() {
             return Collections.emptyList();
         }
-        
+
         @SuppressWarnings("unused") // Called via reflection
         public List<FilePath> getUnversionedFiles() {
             return Collections.emptyList();
         }
-    }
-
-    // Helper method to create a mock Change without using the problematic constructor
-    private static Change createMockChange() {
-        // Create a mock ContentRevision to satisfy the Change constructor
-        com.intellij.openapi.vcs.changes.ContentRevision mockRevision = 
-            new com.intellij.openapi.vcs.changes.ContentRevision() {
-                @Override
-                public String getContent() {
-                    return "test content";
-                }
-
-                @Override
-                public com.intellij.openapi.vcs.FilePath getFile() {
-                    return null; // This is acceptable for our test
-                }
-
-                @Override
-                public com.intellij.openapi.vcs.history.VcsRevisionNumber getRevisionNumber() {
-                    return null;
-                }
-            };
-        
-        return new Change(null, mockRevision) {
-            @Override
-            public com.intellij.openapi.vcs.changes.ContentRevision getBeforeRevision() {
-                return null;
-            }
-
-            @Override
-            public com.intellij.openapi.vcs.changes.ContentRevision getAfterRevision() {
-                return mockRevision;
-            }
-        };
     }
 }
